# semantic_verification_engine

./: .dockerignore  .gitignore  CHANGELOG.md  DATA_SOURCES.md  LICENSE-MIT  README.md  config.env  dockerfile  main.py  notebook_config.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.dvc/: config
data/: 01_raw.dvc  02_intermediate.dvc  03_models.dvc  04_metrics.dvc  05_final.dvc  06_books.dvc  08_generated_questions.dvc  09_themes.dvc  README.md
data/01_raw/: .Rapp.history
data/02_intermediate/: dataframe_nb1_output_v0.parquet  dataframe_nb2_output_v0.parquet
data/03_models/: tfidf_vectorizer_v1.0.0.joblib
data/04_metrics/: nb1_summary.json
data/05_final/: trivia_dataset_v1.0.0_baseline.csv
data/06_books/: deathly_hallows_chapter_01.txt  deathly_hallows_chapter_02.txt  deathly_hallows_chapter_03.txt  deathly_hallows_chapter_04.txt  deathly_hallows_chapter_05.txt  deathly_hallows_chapter_06.txt  deathly_hallows_chapter_07.txt  deathly_hallows_chapter_08.txt  deathly_hallows_chapter_09.txt  (+87 more)
docs/: 00_DESIGN_DOC_AND_ARCHITECTURE.md  01_EXECUTION_PLAN.md  02_system_thinking_casestudy.md  03_engineering_backlog.md  NER_workflow.txt
notebooks/: 01_cleaning_and_eda.ipynb  02_eda_and_deduplication.ipynb  04-NER_implementation.ipynb
scripts/: extract_hp_corpus.py  generate_questions.py  tempCodeRunnerFile.py
src/: clean_dataset.ipynb
storage/: session_report_manual_e2e_integration_edge_cases_2026-06-01_15-33-07.json
tests/: tempCodeRunnerFile.py  test_introduction.py  test_trivia.py  test_utils_paths.py
(+405 files in other folders)
